Closed Bug 1632020 Opened 5 years ago Closed 5 years ago

no content meta viewport tag should be ignored

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: hiro, Assigned: hiro)

References

()

Details

Attachments

(2 files)

In bug 1498729 we introduced a machinery that if there are multiple meta viewport tags, the content of the last modified meta viewport tag is used. But it looks like Chrome doesn't use the content if the meta viewport tag doesn't have content attribute, i.e. <meta name="viewport">.

To be more precise, Chrome handles <meta name="viewport" content=""> as a valid viewport tag.

Modified a test case by David Bokan. http://bokand.github.io/20701.html

That's what Chrome does basically and it does quite make sense. But in the test
case of test_meta_viewport_removing_content_attribute.html which removes a valid
content attribute, Chrome uses the removed content, which seems a bug in Chrome
I've reported before [1], and I believe we shouldn't mimic the bug.

[1] https://bugs.chromium.org/p/chromium/issues/detail?id=986674

Assignee: nobody → hikezoe.birchill
Status: NEW → ASSIGNED
Summary: no content meta viewport tag should be discarded → no content meta viewport tag should be ignored
Pushed by hikezoe.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7bb67169c8da Don't handle no content attribute meta viewport tag. r=smaug
Priority: -- → P2
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: