Bug 1632020 - Don't handle no content attribute meta viewport tag. r=smaug

That's what Chrome does basically and it does quite make sense. But in the test
case of test_meta_viewport_removing_content_attribute.html which removes a valid
content attribute, Chrome uses the removed content, which seems a bug in Chrome
I've reported before [1], and I believe we shouldn't mimic the bug.

[1] https://bugs.chromium.org/p/chromium/issues/detail?id=986674

Differential Revision: https://phabricator.services.mozilla.com/D71879